Fix message body visibility bug

--- a/source/styling.less
+++ b/source/styling.less
@@ -227,13 +227,6 @@ svg[id|="ait"] {
 
     }
 
-    &:not([ait-mails-main-view-preference="none"])
-        #messagepane[src="about:blank"] {
-
-        opacity: 0;
-
-    }
-
 }
 
 /* -- borders, separators & splitters --------------------------------------- */
